MDEV-8273: InnoDB: Assertion failure in file fil0pagecompress.cc line 532

Analysis: Problem was that actual payload size (page size) after compression
was handled incorrectly on encryption. Additionally, some of the variables
were not initialized.

Fixed by encrypting/decrypting only the actual compressed page size.